--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,10 @@ if(WIN32)
         set(COMMON_ROOT "D:/Common")
         set(DLIB_CONTRIB "D:/Projects/dlib-contrib")
         include(D:/dlib-19.19/dlib/cmake)
+    elseif(${PLATFORM} STREQUAL "LaptopN")
+        set(COMMON_ROOT "C:/Projects/Common")
+        set(DLIB_CONTRIB "C:/Projects/dlib-contrib")
+        include(C:/dlib-19.19/dlib/cmake)        
     else()
         set(COMMON_ROOT "D:/Common")
         set(DLIB_CONTRIB "D:/Projects/dlib-contrib")
@@ -41,12 +45,11 @@ else()
         set(DLIB_CONTRIB "~/Projects/dlib-contrib")
         include(~/dlib-19.18/dlib/cmake)
     elseif(${PLATFORM} STREQUAL "HPC")
-        include(~/dlib/dlib/cmake)
-        set(COMMON_ROOT "~/Common")
+        set(COMMON_ROOT "~/Projects/Common")
         set(DLIB_CONTRIB "~/Projects/dlib-contrib")
         include(~/dlib-19.18/dlib/cmake)
     else()
-        set(COMMON_ROOT "~/Common")
+        set(COMMON_ROOT "~/Projects/Common")
         set(DLIB_CONTRIB "~/Projects/dlib-contrib")
         include(~/dlib-19.18/dlib/cmake)
     endif()
