--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,10 @@ if(WIN32)
         set(COMMON_ROOT "C:/Projects/Common")
         set(DLIB_CONTRIB "C:/Projects/dlib-contrib")
         include(C:/dlib-19.19/dlib/cmake)        
+    elseif(${PLATFORM} STREQUAL "BEAST")
+        set(COMMON_ROOT "E:/Projects/Common")
+        set(DLIB_CONTRIB "E:/Projects/dlib-contrib")
+        include(E:/dlib-19.19/dlib/cmake)
     else()
         set(COMMON_ROOT "D:/Common")
         set(DLIB_CONTRIB "D:/Projects/dlib-contrib")
